@@ -1,37 +1,38 @@
 package com.weatherwhere.weatherservice.controller;
 
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.env.MapPropertySource;
-import org.springframework.core.env.MutablePropertySources;
-import org.springframework.core.io.ClassPathResource;
+
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.client.RestTemplate;
 
-import javax.naming.CannotProceedException;
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.util.HashMap;
-import java.util.Map;
+import java.io.UnsupportedEncodingException;
+import java.net.*;
+import java.nio.charset.Charset;
 
 
 @RestController
 @RequestMapping("/weather")
 public class WeatherMidController {
     @GetMapping("/test")
-    public String test() throws IOException {
+    public ResponseEntity<Object> test() throws UnsupportedEncodingException, URISyntaxException {
         String apiUrl = "http://apis.data.go.kr/1360000/MidFcstInfoService/getMidTa";
-
         String serviceKey = "XiXQig6ZMt9WhFnz7w2pl78HnvEb4h5S1s3n51BpoJU5L064VCaM1iT8DUUrx8Qta9OPr3nnm88UtKukLSf0xA%3D%3D";
+
+        RestTemplate restTemplate = new RestTemplate();
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(new MediaType("application", "JSON", Charset.forName("UTF-8")));
+
         String pageNo = "1"; // 페이지 번호
         String numOfRows = "10"; // 한 페이지 결과 수
         String dataType = "JSON"; // 응답자료 형식
         String regId = "11B10101"; // 예보 구역 코드
-        String tmFc = "202303170600"; // 발표 시각
+        String tmFc = "202303190600"; // 발표 시각
 
         StringBuilder urlBuilder = new StringBuilder(apiUrl);
 
@@ -42,31 +43,14 @@ public class WeatherMidController {
         urlBuilder.append("&" + URLEncoder.encode("regId", "UTF-8") + "=" + URLEncoder.encode(regId, "UTF-8"));
         urlBuilder.append("&" + URLEncoder.encode("tmFc", "UTF-8") + "=" + URLEncoder.encode(tmFc, "UTF-8"));
 
-        /**
-         * GET 방식으로 전송해서 파라미터 받아오기
-         */
-        URL url = new URL(urlBuilder.toString());
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("GET");
-        conn.setRequestProperty("Content-type", "application/json");
-        System.out.println("Response code: " + conn.getResponseCode());
-        BufferedReader rd;
-        if (conn.getResponseCode() >= 200 && conn.getResponseCode() <= 300) {
-            rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-        } else {
-            rd = new BufferedReader(new InputStreamReader(conn.getErrorStream()));
-        }
+        URI uri = new URI(urlBuilder.toString());
 
-        StringBuilder sb = new StringBuilder();
-        String line;
-        while ((line = rd.readLine()) != null) {
-            sb.append(line);
-        }
-        rd.close();
-        conn.disconnect();
-        String result = sb.toString();
+        // ParameterizedTypeReference 인자를 잘 활용하자.
+        ResponseEntity<Object> result
+                = restTemplate.exchange(uri, HttpMethod.GET, null, new ParameterizedTypeReference<Object>() {
+                }
+        );
         System.out.println(result);
-
         return result;
     }
 }
